--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "onkeltem/toggl",
+    "name": "onkeltem/toggl-report",
     "type": "project",
     "description": "Toggl.com CLI reporting tool.",
     "keywords": ["toggl", "api", "guzzle"],
@@ -13,14 +13,13 @@
     "require": {
         "ajt/guzzle-toggl": "^0.12.0"
     },
-    "bin": ["bin/toggl"],
+    "bin": ["bin/toggl-report"],
     "scripts": {
-        "toggl": "vendor/bin/toggle"
+        "toggl": "vendor/bin/toggle-report"
     },
     "autoload": {
         "psr-4": {
-            "Toggl\\": "src/",
-            "Color\\": ""
+            "TogglReport\\": "src/"
         }
     }
 }
