--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "description": "Toggl.com CLI reporting tool.",
     "keywords": ["toggl", "api", "guzzle"],
-    "license": "MIT",
+    "license": "LGPL-3.0-or-later",
     "authors": [
         {
             "name": "Artiom Neganov",
